# credit_scoring

./: .gitignore  pyproject.toml  setup.cfg
notebooks/: sql.ipynb
src/: parser.py
src/app/antifraud/: modeling.py  rules.py
src/app/core/: api.py  calc_explanation.ipynb  calc_proba.ipynb  calculator.py  cbc.pkl  model.py
src/app/modelling/: features_utils.py  models_utils.py
src/app/modelling/features/: application_features.py  bureau.py  credit_card_features.py  installments_payments_features.py  pos_cash_balance.py  previous_application_features.py
src/app/modelling/features/features_csv/: .gitignore
src/app/modelling/mfeatures/: application.py  bureau.py  bureau_balance.py  credit_card.py  feature_utils.py  installments_payments.py  pos_cash_balance.py  previous_apllication.py
src/app/modelling/mfeatures/mfeatures_csv/: .gitignore
src/app/scoring/: Comparison.md  dtc.py  ensemble.py  logreg.py
src/app/scoring/models/: cbc.pkl  dtc.pkl  logreg.pkl
src/app/utils/: db_connection.py
src/config/: config.py
tests/core/calculator/: test_calculator_all_cases.py
