[tool.poetry]
name = "credit-scoring"
version = "0.1.0"
description = ""
authors = ["Aleksandr Klokov <klokov55@gmail.com>"]
readme = "README.md"
packages = [{include = "credit_scoring"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
pandas = "^1.5.3"
psycopg2 = "^2.9.5"
wemake-python-styleguide = "^0.17.0"
scikit-learn = "^1.2.1"
catboost = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
